corrected z-index of icons so songs will play

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -897,6 +897,7 @@ h2 {
 	#adhk {
 		left: 100px;
   	top: 600px;
+  	z-index: 20;
 
 		img {
 			height: 110px;
@@ -915,6 +916,7 @@ h2 {
 	#spinning {
 		left: 850px;
     top: 400px;
+    z-index: 20;
 
 		img {
 			width: 90px;
@@ -951,6 +953,7 @@ h2 {
 	#ideata {
 		left: 180px;
     top: 250px;
+    z-index: 20;
 
 		img {
 			width: 105px;
